k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sfu
  labels:
    name: sfu
    app: sfu-backend
